--- a/src/index.pug
+++ b/src/index.pug
@@ -6,6 +6,6 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Document
     body
-        .wrapper 
-
+        .wrapper Hello World!
+            
 script(src='./main.js')
