--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,22 @@
 @import "nullstyle.scss";
 
+/*fonts--*/
+@font-face {
+	font-family: 'Roboto';
+	src: url('fonts/Roboto-Regular.eot');
+	src: local('☺'), url('fonts/Roboto-Regular.woff') format('woff'), url('fonts/Roboto-Regular.ttf') format('truetype'), url('fonts/Roboto-Regular.svg') format('svg');
+	font-weight: 400;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Roboto';
+	src: url('fonts/Roboto-Bold.eot');
+	src: local('☺'), url('fonts/Roboto-Bold.woff') format('woff'), url('fonts/Roboto-Bold.ttf') format('truetype'), url('fonts/Roboto-Bold.svg') format('svg');
+	font-weight: 700;
+	font-style: normal;
+}
+
+
 @mixin fontz($f, $c) {
     font-size: $f;
     color: $c;
@@ -10,8 +27,9 @@
 }
 
 html,body {
-	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	font-family: 'Roboto';
 }
 .wrapper {
-	font-style: italic;
+	font-size: 40px;
+    font-weight: 700;
 }
