trying to do header

--- a/src/index.pug
+++ b/src/index.pug
@@ -6,7 +6,32 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Document
     body
-        .wrapper Fall deeper in love with
+        .wrapper
+            .container
+                header.header
+                    .content 
+                        nav.menu 
+                            ul.menu__item 
+                                li.menu__link Shop
+                                    a(href="") 
+                                li.menu__link Collections
+                                    a(href="") 
+                                li.menu__link Try a Free Guide
+                                    a(href="")                                 
+                                li.menu__link Stories
+                                    a(href="")
+                        .menu__logo
+                            a(href="#")
+                                img(src="/img/icon/logo.png", alt="logo")
+                        .menu__social 
+                            a(href="#")
+                                img(src="/img/icon/inst.png", alt="inst")
+                            a(href="#")
+                                img(src="/img/icon/search.png", alt="search")
+                            a(href="#")
+                                img(src="/img/icon/lock.png", alt="lock")
+
+
 
 
             
