--- a/src/main.scss
+++ b/src/main.scss
@@ -15,21 +15,68 @@
 	font-weight: 700;
 	font-style: normal;
 }
-
-
-@mixin fontz($f, $c) {
-    font-size: $f;
-    color: $c;
+/*-----*/
+@mixin fsw($s, $w) {
+    font-size: $s;
+    font-weight: $w;
 }
-
-%newstyle {
-    color: red;
-}
-
+/*-----------------------------*/
 html,body {
 	font-family: 'Roboto';
+	@include fsw(20px, 400);
 }
 .wrapper {
-	font-size: 40px;
-    font-weight: 700;
+	min-height: 100%;
+	overflow: hidden;
+	display: flex;
+	flex-direction: column;
+}
+.container {
+	margin: 0 auto;
+	max-width: 1100px;
+	padding: 0 15px;
+}
+
+.header {
+}
+.content {
+	display: flex;
+	flex-direction: row;
+}
+.menu {
+
+
+		// .menu__item
+
+		&__item {
+			display: flex;
+			flex-direction: row;
+		}
+
+		// .menu__link
+
+		&__link {
+		}
+
+		// .menu__logo
+
+		&__logo {
+		}
+
+		// .menu__social
+
+		&__social {
+			display: flex;
+			flex-direction: row;
+			a{
+				display: flex;
+				height: 40px;
+				width: 40px;
+				&:first-child {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+				}
+			}
+		}
 }
