--- a/src/index.pug
+++ b/src/index.pug
@@ -12,11 +12,11 @@ html(lang="en")
                     nav.menu 
                         ul.menu__item 
                             li.menu__link 
-                                a(href="") Shop 
+                                a(href="#") Shop 
                             li.menu__link 
-                                a(href="") Collections
+                                a(href="#") Collections
                             li.menu__link 
-                                a(href="") Try a Free Guide                               
+                                a(href="#") Try a Free Guide                               
                     .menu__logo
                         a(href="#")
                             img(src="/img/icon/logo.png", alt="logo")
@@ -36,8 +36,11 @@ html(lang="en")
                         a.main__button.button(href="#") Shop Now
                     .main__img 
                         img(src="/img/main.jpg", alt="")
-
-
-
+            .guides 
+                .guides__container.container 
+                    .guides__body 
+                        .guides__title.title Our guides explain countries and cultures.
+                        .guides__subtitle Are you curious about the world around you? Our guides are for smart global citizens, world travelers and engaged residents who want to gain a deeper understanding of the cultures and societies they care about.
+                        .guides__text Available as ebooks here and on Amazon.
             footer.footer лол
 script(src='./main.js')
