--- a/src/main.scss
+++ b/src/main.scss
@@ -78,6 +78,7 @@ html,body {
 		}
 		&__logo {
 			display: flex;
+			margin: 0 150px 0 0;
 		}
 		&__social {
 			display: flex;
@@ -98,15 +99,30 @@ html,body {
 .main {
 	display: flex;
 	flex: 1 1 auto;
+	background: #F0EFEB;
 	&__container {
-		background: #F0EFEB;
 		display: flex;
 		flex-direction: row;
-		
 	}
-	&__body 
-	&__title
-	&__subtitle
+	&__body {
+		margin: 89px 0 0 15px;
+		flex: 1 1 520px;
+	} 
+	&__title {
+		font-family: 'Roboto';
+		font-weight: 700;
+		font-size: 60px;
+		line-height: 70px;
+		color: #000000;
+	}
+	&__subtitle {
+		font-family: 'Roboto';
+		font-weight: 400;
+		font-size: 24px;
+		line-height: 28px;
+		color: #000000;
+		margin: 42px 0 0 0;
+	}
 	&__img {
 		img {
 			max-width: 100%;
@@ -119,8 +135,73 @@ h1 {
 }
 
 
-a.main__button
-.button
+.main__button {
+	padding: 7px 23px 9px 23px;
+	margin: 35px 0 100px 0;
+}
+.button {
+	display: inline-block;
+	background: #000000;
+	border: 1px solid #000000;
+	box-sizing: border-box;
+	border-radius: 100px;
+	font-family: 'Roboto';
+	font-weight: 400;
+	font-size: 17px;
+	line-height: 20px;
+	color: #FFFFFF;
+	&:hover {
+		color: #000000;
+		background: rgba($color: #000000, $alpha: 0.3);
+	}
+	&:active {
+		background: #000000;
+		color: #FFFFFF;
+	}
+}
+/*----guides block------*/
+.guides {
+	display: flex;
+	flex: 1 1 auto;
+	&__container {
+		display: flex;
+		flex-direction: row;
+	}
+	&__body {
+		margin: 60px 0 0 0;
+		flex: 1 1 auto;
+		text-align: center;
+	}
+	&__title {
+		margin: 0 0 27px 0;
+	}
+	&__subtitle {
+		font-family: 'Roboto';
+		font-weight: 400;
+		font-size: 20px;
+		line-height: 23px;
+		text-align: center;
+		color: #000000;
+		margin: 0 0 47px 0;
+	}
+	&__text{
+		font-family: 'Roboto';
+		font-weight: 400;
+		font-size: 20px;
+		line-height: 23px;
+		text-align: center;
+		color: #000000;
+	}
+}
+/*---TITLE BLOCK----*/
+.title{
+	font-family: 'Roboto';
+	font-weight: 700;
+	font-size: 36px;
+	line-height: 42px;
+	text-align: center;
+	color: #000000;
+}
 
 .footer {
 }
