people  culture power block

--- a/src/index.pug
+++ b/src/index.pug
@@ -38,9 +38,60 @@ html(lang="en")
                         img(src="/img/main.jpg", alt="")
             .guides 
                 .guides__container.container 
+                    .guides__title.title Our guides explain countries and cultures.
                     .guides__body 
-                        .guides__title.title Our guides explain countries and cultures.
                         .guides__subtitle Are you curious about the world around you? Our guides are for smart global citizens, world travelers and engaged residents who want to gain a deeper understanding of the cultures and societies they care about.
                         .guides__text Available as ebooks here and on Amazon.
+            .sellers 
+                .sellers__container.container 
+                    .sellers__title.title Our best sellers
+                    .sellers__body 
+                        .sellers__column 
+                            .sellers-img 
+                                img(src="/img/sellers1.jpg", alt="#") 
+                            .sellers_block
+                                .sellers-text Thalby Guide to French Culture and Heritage 
+                                .sellers-cost USD 6.99
+                                a(href="#").sellers-link Add to cart
+                        .sellers__column 
+                            .sellers-img
+                                img(src="/img/sellers2.jpg", alt="#") 
+                            
+                            .sellers_block
+                                .sellers-text Thalby Guide to French People and Society
+                                .sellers-cost USD 6.99
+                                a(href="#").sellers-link Add to cart
+                        .sellers__column 
+                            .sellers-img 
+                                img(src="/img/sellers3.jpg", alt="#") 
+                            .sellers_block
+                                .sellers-text Thalby Guide to German Culture and Heritage
+                                .sellers-cost USD 6.99
+                                a(href="#").sellers-link Add to cart
+            .people
+                .people__container.container 
+                    .people__img
+                        img(src="/img/people.png", alt="#")
+                    .people__body
+                        .people__title.title People and Society
+                        .people__subtitle.subtitle Our guides to society deliver all the social insight you need, helping you understand how people live, love and play today and why communities are the way they are.
+                        a(href="#").people__link.link Shop Society Guides
+            .culture
+                .culture__container.container 
+                    .culture__body
+                        .culture__title.title Culture and Heritage
+                        .culture__subtitle.subtitle As well as covering heritage and tradition, our guides to culture introduce you to the designers, artists and chefs creating at the forefront of today's culture.
+                        a(href="#").culture__link.link Shop Culture Guides
+                    .culture__img
+                        img(src="/img/culture.png", alt="#")                   
+            .power
+                .power__container.container 
+                    .power__img
+                        img(src="/img/power.png", alt="#")
+                    .power__body
+                        .power__title.title Power and Politics
+                        .power__subtitle.subtitle Our guides to power take you behind the scenes to explore the power dynamics, policies and politics shaping a country's future and its global position.
+                        a(href="#").power__link.link Coming 2022!
+                
             footer.footer лол
 script(src='./main.js')
