--- a/src/main.scss
+++ b/src/main.scss
@@ -163,17 +163,18 @@ h1 {
 .guides {
 	display: flex;
 	flex: 1 1 auto;
+	margin: 60px 0 0 0;
 	&__container {
 		display: flex;
-		flex-direction: row;
+		flex-direction: column;
 	}
 	&__body {
-		margin: 60px 0 0 0;
-		flex: 1 1 auto;
-		text-align: center;
-	}
+		max-width: 650px;
+}
 	&__title {
+		flex: 1 1 auto;
 		margin: 0 0 27px 0;
+		text-align: center;
 	}
 	&__subtitle {
 		font-family: 'Roboto';
@@ -202,6 +203,176 @@ h1 {
 	text-align: center;
 	color: #000000;
 }
+/****-SELERS BLOCK------*/
+.sellers{
+	margin: 87px 0 248px 0;
+	display: flex;
+	flex: 1 1 auto;
+	&__container{
+		display: flex;
+		flex-direction: column;
+	}
+	&__title {
+		display: flex;
+		justify-content: center;
+	}
+	&__body {
+		margin: 51px 0 0 15px;
+		display: flex;
+		flex-wrap: wrap;
+	}
+	&__column {
+		display: flex;
+		flex-direction: column;
+		margin: 0 63px 0 0;
+		&:last-child {
+			margin: 0;
+		}
+	}
+	&-img {
+		display: flex;
+	}
+	&_block {
+		max-width: 156px;
+		margin: 0 auto;
+	}
+	&-text {
+		margin: 27px 0 0 0;
+		font-family: 'Roboto';
+		font-weight: 700;
+		font-size: 17px;
+		line-height: 20px;
+		text-align: center;
+		color: #000000;
+		}
+	&-cost {
+		margin: 17px 0 0 0;
+		font-family: 'Roboto';
+		font-weight: 400;
+		font-size: 17px;
+		line-height: 20px;
+		text-align: center;
+		color: #000000;
+	}
+	&-link {
+		display: block;
+		margin: 10px 0 0 0;
+		font-family: 'Roboto';
+		font-weight: 700;
+		font-size: 17px;
+		line-height: 20px;
+		text-align: center;
+		text-decoration-line: underline;
+		color: #000000;
+	}
+}
 
+.people {
+	display: flex;
+	flex: 1 1 auto;
+	background: rgba(204, 204, 204, 0.3);
+	padding: 76px 0 51px 0;
+	&__container {
+		display: flex;
+		flex-direction: row;
+	}
+	&__img {
+		flex: 1 1 385px;
+		max-width: 385px;
+	}
+	&__body {
+		padding: 63px 0 0 0;
+		margin: 0 0 0 50px;
+		flex: 0 1 532px;
+	}
+	&__title {
+		text-align: left;
+		margin: 0 0 31px 0;
+	}
+	&__subtitle {
+		margin: 0 0 40px 0;
+	}
+	&__link{
+
+	}
+}
+/*--class people culture power block--*/
+.subtitle{
+	font-family: 'Roboto';
+	font-weight: 400;
+	font-size: 36px;
+	line-height: 42px;
+	color: #000000;
+}
+.link {
+	font-family: 'Roboto';
+	font-weight: 700;
+	font-size: 17px;
+	line-height: 20px;
+	color: #000000;
+	text-decoration: underline;
+}
+/*----*/
+.culture {
+	display: flex;
+	flex: 1 1 auto;
+	background: rgba(204, 204, 204, 0.6);
+	padding: 76px 0 51px 0;
+	&__container {
+		display: flex;
+		flex-direction: row;
+	}
+	&__img {
+		flex: 1 1 385px;
+		max-width: 385px;
+	}
+	&__body {
+		margin: 0 50px 0 0;
+		padding: 63px 0 0 0;
+		flex: 0 1 532px;
+	}
+	&__title {
+		text-align: right;
+		margin: 0 0 31px 0;
+	}
+	&__subtitle {
+		text-align: right;
+		margin: 0 0 31px 0;
+	}
+	&__link{
+		display: flex;
+		justify-content: end;
+	}
+}
+/*--------*/
+.power {
+	display: flex;
+	flex: 1 1 auto;
+	background: rgba(204, 204, 204, 0.3);
+	padding: 76px 0 51px 0;
+	&__container {
+		display: flex;
+		flex-direction: row;
+	}
+	&__img {
+		flex: 1 1 385px;
+		max-width: 385px;
+	}
+	&__body {
+		padding: 63px 0 0 0;
+		margin: 0 0 0 50px;
+		flex: 0 1 532px;
+	}
+	&__title {
+		text-align: left;
+		margin: 0 0 31px 0;
+	}
+	&__subtitle{
+		margin: 0 0 39px 0;
+	}
+	&__link{
+		
+	}
+}
 .footer {
 }
