--- a/src/index.pug
+++ b/src/index.pug
@@ -92,6 +92,28 @@ html(lang="en")
                         .power__title.title Power and Politics
                         .power__subtitle.subtitle Our guides to power take you behind the scenes to explore the power dynamics, policies and politics shaping a country's future and its global position.
                         a(href="#").power__link.link Coming 2022!
-                
+            .some 
+                .some__container.container 
+                    .some__subtitle.subtitle Some of the features that make Thalby guides unique
+                    .some__body 
+                        .some__block 
+                            .circle_bronze
+                            .circle-text Written by <br> locals
+                        .some__block 
+                            .circle_green
+                            .circle-text Packed with <br>insight
+                        .some__block 
+                            .circle_blue
+                            .circle-text Interviews with <br> diverse voices
+                        .some__block 
+                            .circle_brown
+                            .circle-text Key facts and <br> etiquette tips
+                        .some__block 
+                            .circle_red 
+                            .circle-text A concise <br> 1-hour read
+                        .some__block 
+                            .circle_purpure
+                            .circle-text Instant <br> digital access 
+            .each
             footer.footer лол
 script(src='./main.js')
