keep block dont finish

--- a/src/index.pug
+++ b/src/index.pug
@@ -55,8 +55,7 @@ html(lang="en")
                                 a(href="#").sellers-link Add to cart
                         .sellers__column 
                             .sellers-img
-                                img(src="/img/sellers2.jpg", alt="#") 
-                            
+                                img(src="/img/sellers2.jpg", alt="#")                       
                             .sellers_block
                                 .sellers-text Thalby Guide to French People and Society
                                 .sellers-cost USD 6.99
@@ -115,5 +114,41 @@ html(lang="en")
                             .circle_purpure
                             .circle-text Instant <br> digital access 
             .each
+                .each__container.container
+                    .each__title.title Each Thalby guide includes interviews with a range of fascinating voices, such as
+                    .each__body 
+                        .each__column 
+                            .each-img 
+                                img(src="/img/each1.png", alt="#")
+                            .each__block 
+                                .each-title "I don’t like things to be conventional. If it’s too nice, I bring disorder."
+                                .each-subtitle Camille Muller, <br> Landscape Designer, France
+                                a(href="#").each-link Discover
+                        .each__column 
+                            .each-img 
+                            img(src="/img/each2.png", alt="#")
+                            .each__block 
+                                .each-title "Magic is not magic in the sense that I can just wish for anything."
+                                .each-subtitle Sonia Kowalewski, <br> Witch, Germany
+                                a(href="#").each-link Discover
+                        .each__column 
+                            .each-img 
+                            img(src="/img/each3.png", alt="#")
+                            .each__block 
+                                .each-title "I was eight years old when I entered my first competition. I won it."
+                                .each-subtitle Lilly Stoephasius, <br> Skateboarder, Germany
+                                a(href="#").each-link Discover
+            .keep 
+                .keep__container.container 
+                    .keep__title.title Keep in touch
+                    .keep__subtitle Get our travel advice, global views and travel freebies in your inbox
+                    .keep__body
+                        .keep_input
+                            input.keep_input-left(type="text") 
+                            input.keep_input-right(type="text")
+                            input.keep_input-down(type="email")
+                    a(href='#').keep_button.button Subscribe
+                    
+
             footer.footer лол
 script(src='./main.js')
