--- a/src/main.scss
+++ b/src/main.scss
@@ -549,31 +549,32 @@ h1 {
 		margin: 0 0 26px 0;
 	}
 	&__body{
+		flex: 1 0 96px;
 		max-width: 366px;
+		position: relative;
+		margin: 0 auto 16px;
 	}
 	&_input{
-		display: block;
-		margin: 0 0 16px 0;
-		position: relative;
-		max-width: 368px;
-		&-left{
+		&-right{
 			position: absolute;
 			border: 1px solid #000000;
-			bottom: 0;
+			top: 0;
 			left: 0;
+			padding: 10px 50px 10px 10px;
 		}
-		&-right{
+		&-left{
+			position: absolute;
+			top: 0;
+			right: 0;
+			border: 1px solid #000000;
+			padding: 10px 50px 10px 10px;	
+		}
+		&-down{
 			position: absolute;
 			bottom: 0;
 			right: 0;
 			border: 1px solid #000000;
-		}
-		&-down{
-			margin: 18px 0 0 0	;
-			position: absolute;
-			top: 0;
-			left: 0;
-			border: 1px solid #000000;
+			padding: 10px 50px 10px 10px;
 		}
 	}
 	&_button{
@@ -582,4 +583,87 @@ h1 {
 	}
 }
 .footer {
+	display: flex;
+	flex: 1 1 auto;
+	background:#020202;
+	&__container {
+		display: flex;
+		flex-direction: column;
+		padding: 51px 0 16px 0;
+	}
+	&__body {
+		display: flex;
+		margin: 0 0 5px 0;
+	}
+	&_column {
+		display: flex;
+		flex-direction:column;
+	}
+	&_logo {
+		margin: 0 0 25px 0;
+	}
+	&_block {
+	}
+	&-link {
+		margin: 0 20px 0 0;
+		&:last-child {
+			margin: 0;
+		}
+		img {
+			max-height: 100%;
+			max-width: 100%;
+
+		}
+	}
+	&_menu {
+		display: flex;
+		flex-direction: row;
+	}
+	&_down {}
+
+	&_text{
+		font-family: 'Roboto';
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 23px;
+		text-align: center;
+		color: #FFFFFF;
+	}
+	&-list {
+		margin: 0 0 12px 0;
+		&:first-child {
+			text-transform: uppercase;
+			margin: 0 0 36px 0;
+		}
+		&:last-child {
+			margin: 0;
+		}
+		a {
+			color: #FFFFFF;
+			&:hover {
+				color: rgba(204, 204, 204, 0.3);
+			}
+		}
+
+	}
+}
+.menu_column {
+	&-left{
+		li {
+			font-family: 'Roboto';
+			font-weight: 400;
+			font-size: 14px;
+			line-height: 21px;
+			color: #FFFFFF;
+		}
+	}
+	&-right {
+		li {
+			font-family: 'Roboto';
+			font-weight: 400;
+			font-size: 14px;
+			line-height: 21px;
+			color: #FFFFFF;
+		}
+	}
 }
