--- a/src/index.pug
+++ b/src/index.pug
@@ -74,7 +74,7 @@ html(lang="en")
                     .people__body
                         .people__title.title People and Society
                         .people__subtitle.subtitle Our guides to society deliver all the social insight you need, helping you understand how people live, love and play today and why communities are the way they are.
-                        a(href="#").people__link.link Shop Society Guides
+                        a(href="#").link Shop Society Guides
             .culture
                 .culture__container.container 
                     .culture__body
@@ -90,7 +90,7 @@ html(lang="en")
                     .power__body
                         .power__title.title Power and Politics
                         .power__subtitle.subtitle Our guides to power take you behind the scenes to explore the power dynamics, policies and politics shaping a country's future and its global position.
-                        a(href="#").power__link.link Coming 2022!
+                        a(href="#").link Coming 2022!
             .some 
                 .some__container.container 
                     .some__subtitle.subtitle Some of the features that make Thalby guides unique
@@ -161,24 +161,25 @@ html(lang="en")
                                 a.footer-link(href="") 
                                     img(src="img/icon/twitterfooter.png", alt="")
                         .footer_menu 
-                            ul.menu_column-left
-                                li.footer-list 
-                                    a(href="#") about
-                                li.footer-list 
-                                    a(href="#") About Us
-                                li.footer-list 
-                                    a(href="#") Privacy Policy
-                                li.footer-list 
-                                    a(href="#") Terms and Conditions
-                                li.footer-list 
-                                    a(href="#") Write for Us
-                            ul.menu_column-right
-                                li.footer-list 
-                                    a(href="#") Contact
-                                li.footer-list 
-                                    a(href="#") Email hi@thalby.com
-                                li.footer-list 
-                                    a(href="#") Help
-                    .footer_down 
-                        .footer_text Thalby LLC © 2021
+                            .menu_column-left
+                                ul
+                                    li.footer-list 
+                                        a(href="#") about
+                                    li.footer-list 
+                                        a(href="#") About Us
+                                    li.footer-list 
+                                        a(href="#") Privacy Policy
+                                    li.footer-list 
+                                        a(href="#") Terms and Conditions
+                                    li.footer-list 
+                                        a(href="#") Write for Us
+                            .menu_column-right
+                                ul
+                                    li.footer-list 
+                                        a(href="#") Contact
+                                    li.footer-list 
+                                        a(href="#") Email hi@thalby.com
+                                    li.footer-list 
+                                        a(href="#") Help
+                    .footer_down Thalby LLC © 2021
 script(src='./main.js')
