--- a/src/main.scss
+++ b/src/main.scss
@@ -652,7 +652,6 @@ h1 {
 }
 .menu_column {
 	&-left{
-		flex: 1 0 175px;
 		margin: 0 50px 0 0;
 		li {
 			font-family: 'Roboto';
@@ -664,7 +663,7 @@ h1 {
 		}
 	}
 	&-right {
-		flex: 1 0 175px;
+		margin: 0 15px 0 0;
 		li {
 			font-family: 'Roboto';
 			font-weight: 400;
